fixed the name hover image covering our names

--- a/CSS/index.scss
+++ b/CSS/index.scss
@@ -73,6 +73,7 @@ nav {
 
   .name{
     color:white;
+
   }
 
   .mugshot:hover{
@@ -82,6 +83,7 @@ nav {
     -o-transform:scale(1.1); /* Opera */
      transform:scale(1.1);
   }
+
 
   .mugshot{
     -webkit-transition: all .4s ease; /* Safari and Chrome */
@@ -248,6 +250,10 @@ section {
   .hamburger{
     visibility: hidden;
   }
+  .mugshot:hover + .name{
+    padding-top:30px;
+    transition: all .4s;
+  }
 }
 
 /* Desktop */
@@ -261,4 +267,5 @@ section {
     width: 25%;
     position: relative;
   }
+
 }
